# smabo

./: .gitmodules  README.md  README_jp.md
simple_code/: calc_odometry_from_encoder_dc_motor.py  cam_stream_on_flask.py  control_move_smabo.py  encoder_dc_motor.py  encoder_pulse_detection.py  pca9685_simple_hand.py  ultrasonic_sr04.py
smabo_pkgs/smabo_messages/: CMakeLists.txt  package.xml
smabo_pkgs/smabo_messages/msg/: DcMotor.msg  Gyro.msg  Servo.msg
smabo_pkgs/smabo_pkg/: setup.cfg  setup.py
smabo_pkgs/smabo_pkg/smabo_pkg/: accel_sub.py  gyro_sub.py  head_arrow_key_commander.py  link3_robot_arm_commander.py  move_robot_commander.py  move_robot_dc_controller.py  pca9685_controller.py  pupil_move.py  simple_hand_angle_commander.py  ultrasonic_sensor.py
smabo_pkgs/smabo_pkgs/smabo_messages/: package.xml
smabo_pkgs/smabo_pkgs/smabo_messages/msg/: DcMotor.msg  Expression.msg  Magnetic.msg  TwoDimensionPosition.msg
smabo_pkgs/smabo_pkgs/smabo_pkg/: package.xml  setup.py
smabo_pkgs/smabo_pkgs/smabo_pkg/smabo_pkg/: cam_stream.py  control_aca9685.py  flask_image_display.py  impression_pub.py  magnetic_sub.py  move_robot_commander.py  move_robot_dc_controller.py  pca9685_controller.py
step/: phone_box_base.step
stl/: GY_30_attachment.stl  arm_link1.stl  arm_link2.stl  arm_link3.stl  back_cover.stl  body.stl  gripper1.stl  gripper1_SG90.stl  gripper2.stl  gripper3.stl  head_stand_base.stl  head_stand_camera_ultra_sonic.stl  phone_box_cover.stl  simple_hand.stl  stage_base.stl  stand_poll.stl  stand_raspi.stl  stand_wall.stl  ultra_sonic_poll.stl
